--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "vue": "^2.0.0-rc.5",
     "vue-router": "^2.0.0-rc.5",
     "vuex": "^2.0.0-rc.5",
-    "vuex-router-sync": "^3.0.0"
+    "vuex-router-sync": "^3.0.0",
+    "worker-loader": "^0.7.1",
+    "workerjs": "^0.1.1"
   },
   "devDependencies": {
     "autoprefixer": "^6.4.0",
